--- a/templates/student/menu.html
+++ b/templates/student/menu.html
@@ -13,8 +13,6 @@
 {% endblock search %}
 
 {% block content %}
-
-
 <section class="content">
     <div class="blnc-container">
         <div class="topic">
@@ -187,8 +185,12 @@
                 <h4>Mango Juice</h4>
                 <p>Rs. 60</p>
             </div>
+            <a href="">
             <img src="{% static 'images/add.svg' %}" alt="add">
+            </a>
         </div>
     </div>
 </div>
+
+
 {% endblock content %}
