--- a/templates/student/menu.html
+++ b/templates/student/menu.html
@@ -41,34 +41,34 @@
     <div class="veg-options">
         <img src="{% static 'images/puri.jpg' %}" alt="puri">
         <p>Puri Tarkari</p>
-        <div class="icon"><span>Rs.90/per plate</span><img src="{% static 'images/add.svg' %}" alt="add"></div>
+        <div class="icon"><span>Rs.90/per plate</span><button class="add-to-cart">Add to Cart</button></div>
     </div>
     <div class="veg-options">
         <img src="{% static 'images/samosa.jpg' %}" alt="samosa">
         <p>Samosa</p>
-        <div class="icon"><span>Rs.100/per plate</span><img src="{% static 'images/add.svg' %}" alt="add"></div>
+        <div class="icon"><span>Rs.100/per plate</span><button class="add-to-cart">Add to Cart</button></div>
     </div>
     <div class="veg-options">
         <img src="{% static 'images/noodles.jpg' %}" alt="noodles">
         <p>Noodles</p>
-        <div class="icon"><span>Rs.50/per plate</span><img src="{% static 'images/add.svg' %}" alt=""></div>
+        <div class="icon"><span>Rs.50/per plate</span><button class="add-to-cart">Add to Cart</button></div>
     </div>
 </div>
 <div class="row">
     <div class="veg-options">
         <img src="{% static 'images/alooparatha.jpg' %}" alt="paratha">
         <p>Aloo Paratha</p>
-        <div class="icon"><span>Rs.50/per piece</span><img src="{% static 'images/add.svg' %}" alt="add"></div>
+        <div class="icon"><span>Rs.50/per piece</span><button class="add-to-cart">Add to Cart</button></div>
     </div>
     <div class="veg-options">
         <img src="{% static 'images/pakoda.jpg' %}" alt="pakoda">
         <p>Pakoda</p>
-        <div class="icon"><span>Rs.50/per plate</span><img src="{% static 'images/add.svg' %}" alt="add"></div>
+        <div class="icon"><span>Rs.50/per plate</span><button class="add-to-cart">Add to Cart</button></div>
     </div>
     <div class="veg-options">
         <img src="{% static 'images/samosachaat.jpg' %}" alt="samosa-chaat">
         <p>Samosa Chaat</p>
-        <div class="icon"><span>Rs.80/per plate</span><img src="{% static 'images/add.svg' %}" alt=""></div>
+        <div class="icon"><span>Rs.80/per plate</span><button class="add-to-cart">Add to Cart</button></div>
     </div>
 </div>
 </section>
@@ -78,34 +78,34 @@
     <div class="non-veg">
         <img src="{% static 'images/chickenpakoda.jpg' %}" alt="pakoda">
         <p>Chicken Pakoda</p>
-        <div class="icon"><span>Rs.80/per plate</span><img src="{% static 'images/add.svg' %}" alt="add"></div>
+        <div class="icon"><span>Rs.80/per plate</span><button class="add-to-cart">Add to Cart</button></div>
     </div>
     <div class="non-veg">
         <img src="{% static 'images/boiledegg.jpg' %}" alt="egg">
         <p>Boiled Egg</p>
-        <div class="icon"><span>Rs.30/per piece</span><img src="{% static 'images/add.svg' %}" alt="add"></div>
+        <div class="icon"><span>Rs.30/per piece</span><button class="add-to-cart">Add to Cart</button></div>
     </div>
     <div class="non-veg">
         <img src="{% static 'images/eggrice.jpg' %}" alt="fryrice">
         <p>Egg Fry Rice</p>
-        <div class="icon"><span>Rs.110/per plate</span><img src="{% static 'images/add.svg' %}" alt=""></div>
+        <div class="icon"><span>Rs.110/per plate</span><button class="add-to-cart">Add to Cart</button></div>
     </div>
 </div>
 <div class="row">
     <div class="non-veg">
         <img src="{% static 'images/chickensyabhale.jpg' %}" alt="syabhale">
         <p>Chicken Syabhale</p>
-        <div class="icon"><span>Rs.35/per piece</span><img src="{% static 'images/add.svg' %}" alt="add"></div>
+        <div class="icon"><span>Rs.35/per piece</span><button class="add-to-cart">Add to Cart</button></div>
     </div>
     <div class="non-veg">
         <img src="{% static 'images/chickenmomo.jpg' %}" alt="momo">
         <p>Chicken Momo</p>
-        <div class="icon"><span>Rs.160/per plate</span><img src="{% static 'images/add.svg' %}" alt="add"></div>
+        <div class="icon"><span>Rs.160/per plate</span><button class="add-to-cart">Add to Cart</button></div>
     </div>
     <div class="non-veg">
         <img src="{% static 'images/chickenchowmein.jpg' %}" alt="chowmein">
         <p>Chicken Chowmein</p>
-        <div class="icon"><span>Rs.120/per plate</span><img src="{% static 'images/add.svg' %}" alt=""></div>
+        <div class="icon"><span>Rs.120/per plate</span><button class="add-to-cart">Add to Cart</button></div>
     </div>
 </div>
 </section>
