--- a/static/order.css
+++ b/static/order.css
@@ -1,3 +1,4 @@
+/* Reset and Global Styles */
 * {
     margin: 0;
     padding: 0;
@@ -8,225 +9,239 @@
 
 body {
     background-color: #F2780D;
-    border-radius: 40px;
+    margin: 0;
+    font-size: 16px;
+    line-height: 1.6;
 }
 
+/* Main Container */
 .main-container {
-    padding: 0px;
-    background-color: #fff;
-    border-radius: 40px;
-}
-
-.site-main {
     display: flex;
-    justify-content: space-between;
+    width: 100%;
+    height: 100vh;
 }
 
+/* Sidebar */
+.slide {
+    width: 250px;
+    height: 100vh;
+    background: #fff;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.slide ul {
+    list-style: none;
+    padding: 20px;
+}
+
+.slide ul li {
+    margin-bottom: 10px;
+}
+
+.slide ul li a {
+    text-decoration: none;
+    color: #000;
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    transition: background 0.3s ease;
+}
+
+.slide ul li a:hover {
+    background-color: #F2780D;
+    color: #fff;
+}
+
+.slide ul li a i {
+    margin-right: 10px;
+}
+
+.nav-header {
+    position: absolute;
+    top: 10px;
+    left: 20px;
+    font-size: 24px;
+    color: #F2780D;
+}
+
+/* Content Area */
+.content {
+    flex: 1;
+    margin-left: 250px;
+    background-color: #fff;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+/* Header */
 .header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 5px 40px;
+    background-color: #F2780D;
+    padding: 10px 40px;
     color: #fff;
+    width: 100%;
 }
 
-.logo img {
-    width: 80%;
+.header .logo img {
+    width: 85px;
 }
 
-.search-bar input {
-    width: 400px;
-    padding: 10px;
-    border-radius: 10px;
-    padding: 16px 0px 16px 70px;
-    background-color: #fff;
-    border: none;
-    position: relative;
-}
-
-.search-icon img {
-    width: 80%;
-}
-
-.search-icon {
-    position: absolute;
-    top: 4%;
-    left: 38%;
-}
-
-.profile {
+.header .profile {
     display: flex;
     align-items: center;
     background-color: #ED8B35;
     padding: 10px 16px;
+    border-radius: 20px;
     cursor: pointer;
 }
 
-.profile img {
+.header .profile img {
     width: 40px;
+    border-radius: 50%;
     margin-right: 10px;
 }
 
-.profile a {
-    text-decoration: none;
+.header .profile a {
     color: #fff;
-}
-
-.sidebar {
-    width: 14%;
-    height: 500px;
-    background-color: #fff;
-    border:2px solid #BFC0C0 ;
-    border-radius: 40px 0px 0px;
-    padding: 35px 0px 35px 35px;
-}
-
-.sidebar h1 {
-    color: #F2780D;
-    font-size: 20px;
-    font-weight: 400px;
-}
-
-.menu ul {
-    list-style: none;
-}
-
-.menu ul li {
-    margin: 30px 0;
-}
-
-.menu ul li a {
-    color: #000;
     text-decoration: none;
-    font-size: 16px;
 }
 
-.menu .menu-btn {
-    background-color: #F2780D;
-    padding: 5px;
-}
-
-.menu ul li:hover {
-    cursor: pointer;
-    background-color: #F2780D;
-    padding-left: 20px;
-}
-
-.icon {
-    margin-right: 15px;
-}
-
-.order-btn {
-    background-color: #F2780D;
-    padding: 5px;
-}
-
-.content {
-    flex: 1;
-    margin: 2%;
-    border: 1px solid #F2780D;
-    padding: 0px 40px;
+/* Order Details */
+.order-details {
+    width: 90%;
+    background-color: #fff;
     border-radius: 40px;
-
+    border: 2px solid #F2780D;
+    padding: 20px;
+    margin-top: 20px;
 }
 
-h2 {
+.order-details h2 {
     text-align: center;
-    font-size: 24px;
+    color: #000;
+    margin-bottom: 30px;
 }
 
-.content span {
+.order-details .order-number {
+    text-align: left;
     font-size: 18px;
-}
-
-.order-items {
-    padding-top: 20px;
+    color: #000;
     margin-bottom: 20px;
 }
 
-.order-item {
+/* Order Items */
+.item {
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    margin-bottom: 3%;
+    border-bottom: 1px solid #ccc;
+    padding: 20px 0;
 }
 
-.order-item img {
-    width: auto;
-    margin-right: 15px;
+.item img {
+    width: 100px;
+    height: auto;
+    border-radius: 5px;
+    margin-right: 20px;
 }
 
-.item-details {
-    flex-grow: 1;
-    margin-left: 20px;
+.details {
+    flex: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 20px;
 }
 
-.item-name {
+.details p {
     font-size: 18px;
+    color: #000;
+    margin-bottom: 5px;
 }
 
-.item-date {
-    font-size: 12px;
-    color: #ccc;
+.details span {
+    font-size: 14px;
+    color: #777;
 }
 
-.item-price {
+.price {
     font-size: 16px;
     color: #F2780D;
-    margin-right: 10px;
-}
-
-.quantity-controls {
     display: flex;
     align-items: center;
+}
+
+.quantity {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
     border: 1px solid #F2780D;
+    width: 120px;
+    height: 40px;
     border-radius: 8px;
 }
 
-.quantity-controls button {
-    background-color: transparent;
+.quantity button {
+    background-color: #fff;
     border: none;
-    padding: 5px 10px;
-    font-size: 18px;
-    cursor: pointer;
-}
-
-.quantity-controls .quantity {
-    padding: 0 10px;
-    font-size: 16px;
-}
-
-.total {
-    display: flex;
-    justify-content: space-between;
-    font-size: 18px;
-    border: 1px solid #F2780D;
-    border-radius: 10px;
-    padding: 10px;
-    margin: 15px;
-}
-
-.total .total-price {
-    text-decoration: underline;
     color: #F2780D;
+    font-size: 20px;
+    cursor: pointer;
 }
 
-.total-price:hover {
-    cursor: pointer;
+.quantity input {
+    width: 40px;
+    text-align: center;
+    border: none;
+    font-size: 16px;
+    padding: 0 10px;
     color: #000;
 }
 
+/* Total Section */
+.total {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    font-size: 18px;
+    color: #000;
+    border-top: 2px solid #F2780D;
+    padding: 20px 0;
+    margin-top: 20px;
+    width: 100%;
+}
+
+/* Footer */
 .footer {
     text-align: center;
     color: #fff;
     padding: 10px;
-    margin: 0 auto;
+    background-color: #F2780D;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
+.social-icons {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
 }
 
 .social-icons a {
     display: inline-block;
+    margin: 0 10px;
 }
 
 .social-icons img {
-    width: 100%;
+    width: 24px;
     height: 24px;
 }
