--- a/templates/student/order.html
+++ b/templates/student/order.html
@@ -3,78 +3,78 @@
 
 {% block link %}
 {{ block.super }}
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous" referrerpolicy="no-referrer"/>
 <link rel="stylesheet" href="{% static 'order.css' %}">
 {% endblock link %}
-{% block search %}
-<div class="search-bar">
-    <input type="text" placeholder="What do you want to eat today?">
-    <i class="search-icon"><img src="{% static 'images/search.svg' %}" alt="search"></i>
-</div>
-{% endblock search %}
+
+
 
 {% block content %}
 
 <section class="content">
     <h2>Order Bill</h2>
     <span class="bill-code">Order #123</span>
-    <div class="order-items">
-        <div class="order-item">
-            <img src="{% static 'images/samosa2.jpg' %}" alt="Samosa">
-            <div class="item-details">
-                <div class="item-name">Samosa</div>
-                <div class="item-date">August 1, 2024, 8:22 AM</div>
-            </div>
-            <div class="item-price">+Rs.100</div>
-            <div class="quantity-controls">
-                <button class="decrease">−</button>
-                <span class="quantity">1</span>
-                <button class="increase">+</button>
-            </div>
+    <div class="item">
+        <img src="{% static 'images/samosa2.jpg' %}" alt="Samosa">
+        <div class="details">
+            <p>Samosa</p>
+            <span>August 1, 2024, 8:22 AM</span>
         </div>
-        <div class="order-item">
-            <img src="{% static 'images/vegmomo.jpg' %}" alt="Veg Momo">
-            <div class="item-details">
-                <div class="item-name">Veg Momo</div>
-                <div class="item-date">August 1, 2024, 8:23 AM</div>
-            </div>
-            <div class="item-price">+Rs.80</div>
-            <div class="quantity-controls">
-                <button class="decrease">−</button>
-                <span class="quantity">1</span>
-                <button class="increase">+</button>
-            </div>
+        <div class="price">+Rs.<span class="item-price">100</span></div>
+        <div class="quantity">
+            <button class="decrease">−</button>
+            <input type="text" value="1" class="item-quantity" readonly>
+            <button class="increase">+</button>
         </div>
-        <div class="order-item">
-            <img src="{% static 'images/aloochaat.jpg' %}" alt="Aloo Chaat">
-            <div class="item-details">
-                <div class="item-name">Aloo Chaat</div>
-                <div class="item-date">August 1, 2024, 8:26 AM</div>
-            </div>
-            <div class="item-price">+Rs.50</div>
-            <div class="quantity-controls">
-                <button class="decrease">−</button>
-                <span class="quantity">1</span>
-                <button class="increase">+</button>
-            </div>
+    </div> 
+    
+    <div class="item">
+        <img src="{% static 'images/vegmomo.jpg' %}" alt="Veg Momo">
+        <div class="details">
+            <p>Veg Momo</p>
+            <span>August 1, 2024, 8:23 AM</span>
         </div>
-        <div class="order-item">
-            <img src="{% static 'images/vegchowmein.jpg' %}" alt="Veg Chowmein">
-            <div class="item-details">
-                <div class="item-name">Veg Chowmein</div>
-                <div class="item-date">August 1, 2024, 8:29 AM</div>
-            </div>
-            <div class="item-price">+Rs.150</div>
-            <div class="quantity-controls">
-                <button class="decrease">−</button>
-                <span class="quantity">2</span>
-                <button class="increase">+</button>
-            </div>
+        <div class="price">+Rs.<span class="item-price">80</span></div>
+        <div class="quantity">
+            <button class="decrease">−</button>
+            <input type="text" value="1" class="item-quantity" readonly>
+            <button class="increase">+</button>
         </div>
+    </div>
+    <div class="item">
+        <img src="{% static 'images/aloochaat.jpg' %}" alt="Aloo Chaat">
+        <div class="details">
+            <p>Aloo Chaat</p>
+            <span>August 1, 2024, 8:23 AM</span>
+        </div>
+        <div class="price">+Rs.<span class="item-price">50</span></div>
+        <div class="quantity">
+            <button class="decrease">−</button>
+            <input type="text" value="1" class="item-quantity" readonly>
+            <button class="increase">+</button>
+        </div>
+    </div>
+    <div class="item">
+        <img src="{% static 'images/vegchowmein.jpg' %}" alt="Veg Chowmein">
+        <div class="details">
+            <p>Veg Chowmein</p>
+            <span>August 1, 2024, 8:23 AM</span>
+        </div>
+        <div class="price">+Rs.<span class="item-price">160</span></div>
+        <div class="quantity">
+            <button class="decrease">−</button>
+            <input type="text" value="2" class="item-quantity" readonly>
+            <button class="increase">+</button>
+        </div>
+    </div>
     </div>
     <div class="total">
         <span>Total:</span>
         <span class="total-price">Rs.380</span>
     </div>
 </section>
+<script src="{% static 'js/order.js' %}"></script>
 
 {% endblock content %}
