--- a/templates/student/menu.html
+++ b/templates/student/menu.html
@@ -2,14 +2,15 @@
 {% load static %}
 
 {% block link %}
-    {{ block.super }} 
+    {{ block.super }}
     <link rel="stylesheet" href="{% static 'menu.css' %}">
 {% endblock link %}
+
 {% block search %}
-        <div class="search-bar">
-            <input type="text" placeholder="What do you want to eat today?">
-            <i class="search-icon"><img src="{% static 'images/search.svg' %}" alt="search"></i>
-        </div>
+<div class="search-bar">
+    <input type="text" placeholder="What do you want to eat today?">
+    <i class="search-icon"><img src="{% static 'images/search.svg' %}" alt="search"></i>
+</div>
 {% endblock search %}
 
 {% block content %}
@@ -34,163 +35,73 @@
         <img src="{% static 'images/offer.png' %}" alt="promo image">
     </div>
 </section>
-</div>
+
 <section class="veg">
-<h2>Veg Options</h2>
-<div class="row">
-    <div class="veg-options">
-        <img src="{% static 'images/puri.jpg' %}" alt="puri">
-        <p>Puri Tarkari</p>
-        <div class="icon"><span>Rs.90/per plate</span><button class="add-to-cart">Add to Cart</button></div>
+    <h2>Veg Options</h2>
+    <div class="row">
+        {% for item in items %}
+            {% if item.category == 'veg' %}
+            <div class="veg-options">
+                <img src="{{ item.image.url }}" alt="{{ Puri.name }}">
+                <p>{{ item.name }}</p>
+                <div class="icon">
+                    <span>Rs.{{ item.price }}/per plate</span>
+                    <form method="post" action="{% url 'add_to_cart' item.id %}" class="add-to-cart-form">
+                        {% csrf_token %}
+                        <button type="submit" class="add-to-cart">Add to Cart</button>
+                    </form>
+                </div>
+            </div>
+            {% endif %}
+        {% endfor %}
     </div>
-    <div class="veg-options">
-        <img src="{% static 'images/samosa.jpg' %}" alt="samosa">
-        <p>Samosa</p>
-        <div class="icon"><span>Rs.100/per plate</span><button class="add-to-cart">Add to Cart</button></div>
-    </div>
-    <div class="veg-options">
-        <img src="{% static 'images/noodles.jpg' %}" alt="noodles">
-        <p>Noodles</p>
-        <div class="icon"><span>Rs.50/per plate</span><button class="add-to-cart">Add to Cart</button></div>
-    </div>
-</div>
-<div class="row">
-    <div class="veg-options">
-        <img src="{% static 'images/alooparatha.jpg' %}" alt="paratha">
-        <p>Aloo Paratha</p>
-        <div class="icon"><span>Rs.50/per piece</span><button class="add-to-cart">Add to Cart</button></div>
-    </div>
-    <div class="veg-options">
-        <img src="{% static 'images/pakoda.jpg' %}" alt="pakoda">
-        <p>Pakoda</p>
-        <div class="icon"><span>Rs.50/per plate</span><button class="add-to-cart">Add to Cart</button></div>
-    </div>
-    <div class="veg-options">
-        <img src="{% static 'images/samosachaat.jpg' %}" alt="samosa-chaat">
-        <p>Samosa Chaat</p>
-        <div class="icon"><span>Rs.80/per plate</span><button class="add-to-cart">Add to Cart</button></div>
-    </div>
-</div>
 </section>
+
 <section class="non-veg">
-<h2>Non-Veg Options</h2>
-<div class="row">
-    <div class="non-veg">
-        <img src="{% static 'images/chickenpakoda.jpg' %}" alt="pakoda">
-        <p>Chicken Pakoda</p>
-        <div class="icon"><span>Rs.80/per plate</span><button class="add-to-cart">Add to Cart</button></div>
+    <h2>Non-Veg Options</h2>
+    <div class="row">
+        {% for item in items %}
+            {% if item.category == 'non-veg' %}
+            <div class="non-veg-options">
+                <img src="{{ item.image.url }}" alt="{{ item.name }}">
+                <p>{{ item.name }}</p>
+                <div class="icon">
+                    <span>Rs.{{ item.price }}/per plate</span>
+                    <form method="post" action="{% url 'add_to_cart' item.id %}" class="add-to-cart-form">
+                        {% csrf_token %}
+                        <button type="submit" class="add-to-cart">Add to Cart</button>
+                    </form>
+                </div>
+            </div>
+            {% endif %}
+        {% endfor %}
     </div>
-    <div class="non-veg">
-        <img src="{% static 'images/boiledegg.jpg' %}" alt="egg">
-        <p>Boiled Egg</p>
-        <div class="icon"><span>Rs.30/per piece</span><button class="add-to-cart">Add to Cart</button></div>
-    </div>
-    <div class="non-veg">
-        <img src="{% static 'images/eggrice.jpg' %}" alt="fryrice">
-        <p>Egg Fry Rice</p>
-        <div class="icon"><span>Rs.110/per plate</span><button class="add-to-cart">Add to Cart</button></div>
-    </div>
-</div>
-<div class="row">
-    <div class="non-veg">
-        <img src="{% static 'images/chickensyabhale.jpg' %}" alt="syabhale">
-        <p>Chicken Syabhale</p>
-        <div class="icon"><span>Rs.35/per piece</span><button class="add-to-cart">Add to Cart</button></div>
-    </div>
-    <div class="non-veg">
-        <img src="{% static 'images/chickenmomo.jpg' %}" alt="momo">
-        <p>Chicken Momo</p>
-        <div class="icon"><span>Rs.160/per plate</span><button class="add-to-cart">Add to Cart</button></div>
-    </div>
-    <div class="non-veg">
-        <img src="{% static 'images/chickenchowmein.jpg' %}" alt="chowmein">
-        <p>Chicken Chowmein</p>
-        <div class="icon"><span>Rs.120/per plate</span><button class="add-to-cart">Add to Cart</button></div>
-    </div>
-</div>
 </section>
+
 <section class="drinks">
-<h2>Drinks</h2>
-<div class="drinks-category">
-    <div class="drink-topic">
-        <h3>Hot Drinks</h3>
-        <h3>Cold Drinks</h3>
-    </div>
-    <div class="drinks-row">
-        <div class="drink-item">
-            <img src="{% static 'images/milktea.jpg' %}" alt="Milk Tea">
-            <div class="drink-info">
-                <h4>Milk Tea</h4>
-                <p>Rs. 25</p>
-            </div>
-            <img src="{% static 'images/add.svg' %}" alt="add">
+    <h2>Drinks</h2>
+    <div class="drinks-category">
+        <div class="drink-topic">
+            <h3>Hot Drinks</h3>
+            <h3>Cold Drinks</h3>
         </div>
-        <div class="drink-item">
-            <img src="{% static 'images/coke.jpg' %}" alt="Coke">
-            <div class="drink-info">
-                <h4>Coke</h4>
-                <p>Rs. 35</p>
-            </div>
-            <img src="{% static 'images/add.svg' %}" alt="add">
-        </div>
-    </div>
-    <div class="drinks-row">
-        <div class="drink-item">
-            <img src="{% static 'images/blacktea.jpg' %}" alt="Black Tea">
-            <div class="drink-info">
-                <h4>Black Tea</h4>
-                <p>Rs. 20</p>
-            </div>
-            <img src="{% static 'images/add.svg' %}" alt="add">
-        </div>
-        <div class="drink-item">
-            <img src="{% static 'images/dahi.jpg' %}" alt="Dahi">
-            <div class="drink-info">
-                <h4>Dahi</h4>
-                <p>Rs. 40</p>
-            </div>
-            <img src="{% static 'images/add.svg' %}" alt="add">
+        <div class="drinks-row">
+            {% for item in items %}
+                {% if item.category == 'drink' %}
+                <div class="drink-item">
+                    <img src="{{ item.image.url }}" alt="{{ item.name }}">
+                    <div class="drink-info">
+                        <h4>{{ item.name }}</h4>
+                        <p>Rs.{{ item.price }}</p>
+                    </div>
+                    <form method="post" action="{% url 'add_to_cart' item.id %}" class="add-to-cart-form">
+                        {% csrf_token %}
+                        <button type="submit" class="add-to-cart"><img src="{% static 'images/add.svg' %}" alt="add"></button>
+                    </form>
+                </div>
+                {% endif %}
+            {% endfor %}
         </div>
     </div>
-    <div class="drinks-row">
-        <div class="drink-item">
-            <img src="{% static 'images/coffee.jpg' %}" alt="Coffee">
-            <div class="drink-info">
-                <h4>Coffee</h4>
-                <p>Rs. 35</p>
-            </div>
-            <img src="{% static 'images/add.svg' %}" alt="add">
-        </div>
-        <div class="drink-item">
-            <img src="{% static 'images/lassi.jpg' %}" alt="Lassi">
-            <div class="drink-info">
-                <h4>Lassi</h4>
-                <p>Rs. 90</p>
-            </div>
-            <img src="{% static 'images/add.svg' %}" alt="add">
-        </div>
-    </div>
-    <div class="drinks-row">
-        <div class="drink-item">
-            <img src="{% static 'images/hotlemon.jpg' %}" alt="Hot Lemon">
-            <div class="drink-info">
-                <h4>Hot Lemon</h4>
-                <p>Rs. 20</p>
-            </div>
-            <img src="{% static 'images/add.svg' %}" alt="add">
-        </div>
-        <div class="drink-item">
-            <img src="{% static 'images/mangojuice.jpg' %}" alt="Mango Juice">
-            <div class="drink-info">
-                <h4>Mango Juice</h4>
-                <p>Rs. 60</p>
-            </div>
-            <a href="">
-            <img src="{% static 'images/add.svg' %}" alt="add">
-            </a>
-        </div>
-    </div>
-</div>
-
-
+</section>
 {% endblock content %}
