--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,, shrink-to-fit=no">
     <title>Vojan Express</title>
     <link rel="icon" type="image/svg+xml" href="image/favicon.svg">
     <link rel="icon" type="image/png" href="image/favicon.png">
