--- a/templates/student/order.html
+++ b/templates/student/order.html
@@ -9,10 +9,7 @@
 <link rel="stylesheet" href="{% static 'order.css' %}">
 {% endblock link %}
 
-
-
 {% block content %}
-
 <section class="content">
     <h2>Order Bill</h2>
     <span class="bill-code">Order #123</span>
@@ -28,7 +25,7 @@
             <input type="text" value="1" class="item-quantity" readonly>
             <button class="increase">+</button>
         </div>
-    </div> 
+    </div>
     
     <div class="item">
         <img src="{% static 'images/vegmomo.jpg' %}" alt="Veg Momo">
@@ -43,6 +40,7 @@
             <button class="increase">+</button>
         </div>
     </div>
+
     <div class="item">
         <img src="{% static 'images/aloochaat.jpg' %}" alt="Aloo Chaat">
         <div class="details">
@@ -56,6 +54,7 @@
             <button class="increase">+</button>
         </div>
     </div>
+
     <div class="item">
         <img src="{% static 'images/vegchowmein.jpg' %}" alt="Veg Chowmein">
         <div class="details">
@@ -69,12 +68,13 @@
             <button class="increase">+</button>
         </div>
     </div>
-    </div>
+
+    <!-- Removed the extra closing div -->
+    
     <div class="total">
         <span>Total:</span>
         <span class="total-price">Rs.380</span>
     </div>
 </section>
 <script src="{% static 'js/order.js' %}"></script>
-
 {% endblock content %}
