--- a/static/home.css
+++ b/static/home.css
@@ -14,12 +14,7 @@ body {
 .main-container {
     padding: 0px;
     background-color: #fff;
-    border-radius: 40px;
-}
-
-.site-main {
-    display: flex;
-    justify-content: space-between;
+    border-radius: 50px;
 }
 
 .header {
@@ -31,7 +26,7 @@ body {
 }
 
 .logo img {
-    width: 80%;
+    width: 85%;
 }
 
 .search-bar input {
@@ -45,13 +40,14 @@ body {
 }
 
 .search-icon img {
-    width: 80%;
+    width: 65%;
+    position: static;
 }
 
 .search-icon {
     position: absolute;
-    top: 4%;
-    left: 38%;
+    top: 4.5%;
+    left: 37%;
 }
 
 .profile {
@@ -65,6 +61,7 @@ body {
 .profile img {
     width: 40px;
     margin-right: 10px;
+    border-radius: 50%;
 }
 
 .profile a {
@@ -72,53 +69,55 @@ body {
     color: #fff;
 }
 
-.sidebar {
-    width: 14%;
+.site-main {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.slide {
+    width: 13%;
     height: 500px;
-    background-color: #fff;
-    border:2px solid #BFC0C0 ;
-    border-radius: 40px 0px 0px;
-    padding: 35px 0px 35px 35px;
+    background: #fff;
+    border: 2px solid #d9d9d9;
+    border-radius: 40px 0 0 0;
 }
 
-.sidebar h1 {
+h1 {
     color: #F2780D;
-    font-size: 20px;
-    font-weight: 400px;
+    font-size: 18px;
+    text-align: center;
+    padding: 20px;
+    margin: 5px 0px;
+    pointer-events: none;
 }
 
-.menu ul {
+ul li {
     list-style: none;
 }
 
-.menu ul li {
-    margin: 30px 0;
-}
-
-.menu ul li a {
+ul li a {
     color: #000;
+    padding: 20px 5px;
     text-decoration: none;
     font-size: 16px;
+    display: block;
 }
 
-.menu .dash {
-    background-color: #F2780D;
-    padding: 5px;
+ul li:hover a {
+    color: #fff;
+    background: #F2780D;
 }
 
-.menu ul li:hover {
-    cursor: pointer;
-    background-color: #F2780D;
-    padding-left: 20px;
-}
-
-.icon {
-    margin-right: 15px;
+ul li a i {
+    text-align: center;
+    width: 40px;
 }
 
 .content {
-    
-    margin: 30px 20px 0px 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .banner img {
@@ -126,16 +125,16 @@ body {
     width: 100%;
     height: 470px;
     border-radius: 10px;
+    margin-top: 20px;
 }
 
 .right-sidebar {
     width: 18%;
-    margin: 30px 20px 5px 20px;
+    margin: 20px 10px 5px 0;
     padding: 20px;
     background-color: #fff;
     border: 2px solid #fca052;
     border-radius: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .right-sidebar .balance-container,
@@ -203,11 +202,12 @@ body {
 h2 {
     display: flex;
     justify-content: center;
+    font-weight: 600;
     margin-bottom: 40px;
-    font-weight: 500;
 }
 
-h2:hover {
+.popular-dishes-section h2:hover,
+.category-section h2:hover {
     text-decoration: underline;
     cursor: pointer;
     color: #F2780D;
@@ -281,21 +281,29 @@ h2:hover {
 }
 
 .order-now {
-    margin: 2% 0% 1% 44%;
-    padding: 15px 35px;
+    margin: 2% 0% 1% 45%;
     background-color: #fff;
     color: #000;
     border: 1px solid #FC8019;
-    border-radius: 15px;
+    border-radius: 10px;
     cursor: pointer;
-    font-size: 20px;
     display: flex;
+}
+
+.order-now a {
+    font-size: 16px;
+    text-decoration: none;
+    text-align: center;
+    padding: 8px 15px;
 }
 
 .order-now:hover {
     background-color: #F2780D;
-    color: #fff;
 } 
+
+.order-now a:hover {
+    color: #fff;
+}
 
 .footer {
     text-align: center;
@@ -310,5 +318,6 @@ h2:hover {
 .social-icons img {
     width: 100%;
     height: 24px;
+    margin: 5px;
 }
 
