--- a/static/menu.css
+++ b/static/menu.css
@@ -1,6 +1,5 @@
 * {
     margin: 0;
-    padding: 0;
     box-sizing: border-box;
     font-family: Habibi, sans-serif;
     font-weight: 400;
@@ -12,14 +11,9 @@ body {
 }
 
 .main-container {
-    padding: 0px;
+    padding: 0 0 10px 0;
     background-color: #fff;
-    border-radius: 40px;
-}
-
-.site-main {
-    display: flex;
-    justify-content: space-between;
+    border-radius: 50px;
 }
 
 .header {
@@ -28,30 +22,129 @@ body {
     align-items: center;
     padding: 5px 40px;
     color: #fff;
-}
-
-.logo img {
-    width: 80%;
-}
-
-.search-bar input {
-    width: 400px;
-    padding: 10px;
-    border-radius: 10px;
-    padding: 16px 0px 16px 70px;
-    background-color: #fff;
-    border: none;
     position: relative;
 }
 
-.search-icon img {
-    width: 80%;
+#cart-popup {
+    width: 21%;
+    padding: 10px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+    position: fixed;
+    right: 1%;
+    top: 20%;
+    z-index: 1000;
 }
 
-.search-icon {
+.cart-popup:active {
+    display: block;
+}
+
+#cart-popup h4 {
+    margin-bottom: 15px;
+    font-size: 18px;
+    color: #333;
+    text-align: center;
+}
+
+#cart-items {
+    width: 100%;
+    margin-bottom: 15px;
+    border-collapse: collapse;
+}
+
+#cart-popup p {
+    display: flex;
+    justify-content: space-between;
+    font-size: 16px;
+    margin-bottom: 10px;
+    text-align: right;
+}
+
+#cart-total {
+    font-family: 'poppins', sans-serif;
+    font-weight: 12px;
+    color: #e74c3c;
+}
+
+#cart-items th, #cart-items td {
+    padding: 8px;
+    text-align: left;
+    border-bottom: 1px solid #053d19;
+}
+
+#cart-items th {
+    background-color: #6af878;
+}
+
+#cart-items td {
+    border-bottom: 1px solid #ff5f5f;
+}
+
+.cart-close {
     position: absolute;
-    top: 4%;
-    left: 38%;
+    top: 10px;
+    right: 10px;
+    color: #999;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.cart-close:hover {
+    color: #e74c3c;
+}
+
+.logo img {
+    width: 85%;
+}
+
+.search-bar {
+    position: relative;
+}
+
+.search-bar input {
+    width: 150%;
+    padding: 10px 35px;
+    border-radius: 10px;
+    background-color: #fff;
+    border: none;
+}
+
+.search-bar i {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    transform: translateY(-50%);
+    color: #aaa;
+    cursor: pointer;
+}
+
+.profile-content {
+    width: 20%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    position: relative;
+}
+
+.profile-content .add-to-cart {
+    position: absolute;
+    left: 0;
+}
+
+.add-to-cart a {
+    font-size: 20px;
+    text-decoration: none;
+    color: #ED8B35;
+    background: #fff;
+    padding: 5px;
+    border-radius: 20%;
+}
+
+.cart-count {
+    font-family: 'poppins', sans-serif;
+    font-size: 12px;
 }
 
 .profile {
@@ -65,55 +158,65 @@ body {
 .profile img {
     width: 40px;
     margin-right: 10px;
+    border-radius: 50%;
 }
 
-.sidebar {
-    width: 14%;
+.profile a {
+    text-decoration: none;
+    color: #fff;
+}
+
+.site-main {
+    display: flex;
+}
+
+.slide {
+    width: 13%;
     height: 500px;
-    background-color: #fff;
-    border:2px solid #BFC0C0 ;
-    border-radius: 40px 0px 0px;
-    padding: 35px 0px 35px 35px;
+    background: #fff;
+    border: 2px solid #d9d9d9;
+    border-radius: 40px 0 0 0;
 }
 
-.sidebar h1 {
+h1 {
     color: #F2780D;
-    font-size: 20px;
-    font-weight: 400px;
+    font-size: 18px;
+    text-align: center;
+    padding: 20px;
+    margin: 5px 0px;
+    pointer-events: none;
 }
 
-.menu ul {
+ul {
+    padding: 0px;
+}
+
+ul li {
     list-style: none;
 }
 
-.menu ul li {
-    margin: 30px 0;
-}
-
-.menu ul li a {
+ul li a {
     color: #000;
+    padding: 20px 15px;
     text-decoration: none;
     font-size: 16px;
+    display: block;
 }
 
-.menu .menu-btn {
-    background-color: #F2780D;
-    padding: 5px;
+ul li:hover a {
+    color: #fff;
+    background: #F2780D;
 }
 
-.menu ul li:hover {
-    cursor: pointer;
-    background-color: #F2780D;
-    padding-left: 20px;
-}
-
-.icon {
-    margin-right: 15px;
+ul li a i {
+    text-align: center;
+    width: 40px;
 }
 
 .content {
     flex: 1;
-    margin: 2% 0% 0% 2%;
+    margin: 20px 30px;
+    padding: 20px;
 }
 
 .balance .promo img {
@@ -200,121 +303,159 @@ body {
 h2 {
     display: flex;
     justify-content: center;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
     font-weight: 500;
-}
-
-h2:hover {
-    text-decoration: underline;
+    padding: 10px;
     cursor: pointer;
-    color: #F2780D;
 }
-
 
 .veg .row,
 .non-veg .row {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin: 20px 0;
+    justify-content: space-around;
+    margin: 20px;
+    cursor: pointer;
 }
 
-.veg-options,
-.non-veg-options {
+.veg .veg-options,
+.non-veg .non-veg {
     background: #fff;
     border: 1px solid #AEACAC;
     padding: 40px 30px 20px 30px;
     border-radius: 20px;
     margin-bottom: 30px;
-    width: 30%;
-    text-align: center;
 }
 
 .veg p,
 .non-veg p {
-    margin-bottom: 20px;
+    text-align: center;
+    padding: 5px 0px 20px 0px;
+    cursor: pointer;
 }
 
-.icon {
+.veg .icon,
+.non-veg .icon {
     display: flex;
     justify-content: space-between;
+    cursor: pointer;
 }
 
 .icon span {
     color: #F2780D;
+    cursor: pointer;
 }
 
 .drinks {
-    margin: 20px 0;
+    background: #fff;
+    border: 1px solid #F2780D;
+    border-radius: 20px;
+    margin: 20px;
+    padding: 10px;
+    position: relative;
 }
 
 .drinks-category {
-    background: #fff;
-    border: 1px solid #F2780D;
     padding: 10px 20px;
     border-radius: 20px;
 }
 
-.drink-topic {
+.drinks-category .row {
+    width: 100%;
     display: flex;
-    justify-content: space-evenly;
-    text-decoration: underline;
-    padding: 20px 10px;
+    justify-content: center;
 }
 
-.drinks-row {
+.drink {
+    display: flex;
+    justify-content: space-around;
+    text-decoration: underline;
+    padding: 20px 5px;
+}
+
+h3 {
+    text-align: center;
+}
+
+.col {
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap;
+    width: 50%;
+    border: 1px solid #D6D5D5;
+    padding: 5px;
+    border-radius: 10px;
+    margin: 5px;
 }
 
-.drink-item {
+h4 {
+    margin: 30px 0 0 0;
+    font-size: 18px;
+}
+
+.drink-info {
+    display: flex;
+}
+
+.drink-info p {
+    padding: 35px 5px 0 0;
+    font-size: 12px;
+    color: #F2780D;
+}
+
+.col img {
+    width: auto;
+    border-radius: 20px;
+}
+
+.col .button {
+    display: flex;
+    align-items: end;
+}
+
+.add-to-cart-btn {
+    font-size: 10px;
+    cursor: pointer;
+    background-color: #fff;
+    color: #F2780D;
+    border: 1px solid #ED8B35;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.add-to-cart-btn:active {
+    transform: scale(0.95);
+}
+
+button, .button a {
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+button:hover, .button a:hover {
+    background-color: #e74c3c;
+    color: #fff;
+}
+
+.cart-close:hover {
+    color: #e74c3c;
+}
+
+.btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cart { 
     background: #fff;
-    border: 1px solid #D6D5D5;
+    border: 1px solid #e74c3c;
     padding: 10px;
     border-radius: 10px;
-    margin-bottom: 20px;
+}
+
+.cart a {
     text-align: center;
-    width: 30%;
+    text-decoration: none;
+    color: #585454;
 }
-
-.drink-item img {
-    max-width: 100%;
-    height: auto;
-}
-
-.drinks-row h4 {
-    font-size: 20px;
-    margin-top: 10px;
-}
-
-.drinks-row p {
-    color: #F2780D;
-    margin-top: 5px;
-}
-
-.order-now {
-    display: block;
-    margin: 20px auto;
-    padding: 10px 30px;
-    background-color: #fff;
-    color: #000;
-    border: 1px solid #FC8019;
-    border-radius: 15px;
-    cursor: pointer;
-    font-size: 20px;
-    text-align: center;
-}
-
-.order-now:hover {
-    background-color: #F2780D;
-    color: #fff;
-}
-
-.order-now:hover {
-    background-color: #F2780D;
-    color: #fff;
-} 
 
 .footer {
     text-align: center;
@@ -330,4 +471,5 @@ h2:hover {
 .social-icons img {
     width: 100%;
     height: 24px;
+    margin: 5px;
 }
